<resources>
    <string name="app_name">Surah Shikkha</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="start_loop">Loop Start</string>
    <string name="stop_loop">Loop End</string>
    <string name="reset_loop">Reset</string>
    <string name="surah_and_verse">Verse: </string>
    <string name="arabic_verse">Arabic Verse</string>
    <string name="surah_number">Surah No: </string>
    <string name="surah_name">Surah: </string>
    <string name="surah_al_fatihah">Surah-al-fatihah</string>
    <string name="surah_at_tariq">Surah-at-tariq</string>
    <string name="surah_al_ala">Surah-al-a`la</string>
    <string name="surah_al_ghashiyah">Surah-al-ghashiyah</string>
    <string name="surah_al_fajr">Surah-al-fajr</string>
    <string name="surah_al_balad">Surah-al-balad</string>
    <string name="surah_ash_shams">Surah-ash-shams</string>
    <string name="surah_al_layl">Surah-al-layl</string>
    <string name="surah_ad_duha">Surah-ad-duha</string>
    <string name="surah_as_sharh">Surah-as-sharh</string>
    <string name="surah_at_tin">Surah-at-tin</string>
    <string name="surah_al_alaq">Surah-al-`alaq</string>
    <string name="surah_al_qadr">Surah-al-qadr</string>
    <string name="surah_al_bayyinah">Surah-al-bayyinah</string>
    <string name="surah_az_zilzalah">Surah-az-zilzalah</string>
    <string name="surah_al_adiyat">Surah-al-`adiyat</string>
    <string name="surah_al_qariah">Surah-al-qari`ah</string>
    <string name="surah_at_takathur">Surah-at-takathur</string>
    <string name="surah_al_asr">Surah-al-`asr</string>
    <string name="surah_al_humazah">Surah-al-humazah</string>
    <string name="surah_al_fil">Surah-al-fil</string>
    <string name="surah_quraysh">Surah-quraysh</string>
    <string name="surah_al_maun">Surah-al-ma`un</string>
    <string name="surah_al_kawthar">Surah-al-kawthar</string>
    <string name="surah_al_kafirun">Surah-al-kafirun</string>
    <string name="surah_an_nasr">Surah-an-nasr</string>
    <string name="surah_al_masad">Surah-al-masad</string>
    <string name="surah_al_ikhlas">Surah-al-ikhlas</string>
    <string name="surah_al_falaq">Surah-al-falaq</string>
    <string name="surah_an_nas">Surah-an-nas</string>
    <string name="loop_count">Loop Count</string>
    <string name="loop_control">Repeat Verse</string>
    <string name="max_repeat_count">Repeat Count</string>
    <string name="verse_auto_scroll">Auto Scroll</string>
    <string name="verse_auto_repeat">Auto Repeat</string>
    <string name="translated_verse">Translated Verse</string>
    <string name="cancel">Cancel</string>
    <string name="language_control">Select Language</string>
    <string name="sort">Sort By</string>
    <string-array name="sort_array">
        <item>Surah number</item>
        <item>Surah duration</item>
        <item>Verse count</item>
    </string-array>
    <string name="rate_us">Rate This App</string>
    <string name="menu_share">Share This App</string>
    <string name="menu_control">Control</string>
    <string name="menu_communicate">Communicate</string>
    <string name="bismillah_bangla"> শুরু করছি আল্লাহর নামে যিনি পরম করুণাময়, অতি দয়ালু।</string>
    <string name="bismillah_english"> In the name of Allah, Most Gracious, Most Merciful.</string>
    <string-array name="se1">
        <item>Praise be to Allah, the Cherisher and Sustainer of the worlds;</item>
        <item>Most Gracious, Most Merciful;</item>
        <item>Master of the Day of Judgment.</item>
        <item>Thee do we worship, and Thine aid we seek.</item>
        <item>Show us the straight way,</item>
        <item>The way of those on whom Thou hast bestowed Thy Grace,</item>
        <item>Not the path of those who earned Your wrath, nor of those who went astray.</item>
    </string-array>
    <string-array name="se114">
        <item>Say: I seek refuge with the Lord and Cherisher of Mankind,</item>
        <item>The King (or Ruler) of Mankind,</item>
        <item>The Ilah (or judge) of Manking,-</item>
        <item>From the mischief of the Whisperer (of evil), who withdraws (after his whisper)</item>
        <item>(The same) who whispers into the hearts of Mankind,</item>
        <item>Among jinns and among men.</item>
    </string-array>
    <string-array name="se113">
        <item>Say: I seek refuge with the Lord of the Dawn</item>
        <item>From the mischief of created things;</item>
        <item>From the mischief of Darkness as it overspreads;</item>
        <item>From the mischief of those who practice secret arts;</item>
        <item>And from the mischief of the envious one as he practices envy.</item>
    </string-array>
    <string-array name="se112">
        <item>Say: He is Allah, the One and Only;</item>
        <item>Allah, the Eternal, Absolute;</item>
        <item>He begets not, nor is He begotten;</item>
        <item>And there is none like to Him.</item>
    </string-array>
    <string-array name="se111">
        <item>Perish the hands of the Father of Flame! Perish he!</item>
        <item>No profit to him from all his wealth, and all his gains!</item>
        <item>Burnt soon will he be in a Fire of Blazing Flame!</item>
        <item>His wife shall carry the (crackling) wood - As fuel!-</item>
        <item>A twisted rope of palm-leaf fibre round her (own) neck!</item>
    </string-array>
    <string-array name="se110">
        <item>When comes the Help of Allah, and Victory,</item>
        <item>And you do see the people enter Allah.s Religion in crowds,</item>
        <item>Celebrate the praises of your Lord, and pray for His Forgiveness: For He is Oft-Returning (in Grace and Mercy).</item>
    </string-array>
    <string-array name="se109">
        <item>Say : O you that reject Faith!</item>
        <item>I worship not that which you worship,</item>
        <item>Nor will you worship that which I worship.</item>
        <item>And I will not worship that which you have been wont to worship,</item>
        <item>Nor will you worship that which I worship.</item>
        <item>To you be your Way, and to me mine.</item>
    </string-array>
    <string-array name="se108">
        <item>To thee have We granted the Fount (of Abundance).</item> 
        <item>Therefore to your Lord turn in Prayer and Sacrifice.</item>
        <item>For he who hates you, he will be cut off (from Future Hope).</item>
    </string-array>
    <string-array name="se107">
        <item>Do you See one who denies the Judgment (to come)?</item>
        <item>Then such is the (man) who repulses the orphan (with harshness),</item>
        <item>And encourages not the feeding of the indigent.</item>
        <item>So woe to the worshippers</item>
        <item>Who are neglectful of their prayers,</item>
        <item>Those who (want but) to be seen (of men),</item>
        <item>But refuse (to supply) (even) neighborly needs.</item>
    </string-array>
    <string-array name="se106">
        <item>For the covenants (of security and safeguard enjoyed) by the Quraysh,</item>
        <item>Their covenants (covering) journeys by winter and summer,-</item>
        <item>Let them adore the Lord of this House,</item>
        <item>Who provides them with food against hunger, and with security against fear (of danger).</item>
    </string-array>
    <string-array name="se105">
        <item>See you not how your Lord dealt with the Companions of the Elephant?</item>
        <item>Did He not make their treacherous plan go astray?</item>
        <item>And He sent against them Flights of Birds,</item>
        <item>Striking them with stones of baked clay.</item>
        <item>Then He made them like an empty field of stalks and straw, (of which the corn) has been eaten up.</item>
    </string-array>
    <string-array name="se104">
        <item>Woe to every (kind of) scandal-monger and-backbiter,</item>
        <item>Who piles up wealth and lays it by,</item>
        <item>Thinking that his wealth would make him last for ever!</item>
        <item>By no means! He will be sure to be thrown into That which Breaks to Pieces,</item>
        <item>And what will explain to you that which Breaks to Pieces?</item>
        <item>(It is) the Fire of (the Wrath of) Allah kindled (to a blaze),</item>
        <item>The which doth mount (Right) to the Hearts:</item>
        <item>It shall be made into a vault over them,</item>
        <item>In columns outstretched.</item>
    </string-array>
    <string-array name="se103">
        <item>By (the Token of) Time (through the ages),</item>
        <item>Verily Man is in loss,</item>
        <item>Except such as have Faith, and do righteous deeds, and (join together) in the mutual teaching of Truth, and of Patience and Constancy.</item>
    </string-array>
    <string-array name="se102">
        <item>The mutual rivalry for piling up (the good things of this world) diverts you (from the more serious things),</item>
        <item>Until you visit the graves.</item>
        <item>But nay, you soon shall know (the reality).</item>
        <item>Again, you soon shall know!</item>
        <item>No, were you to know with certainty of mind, (you would beware!)</item>
        <item>you shall certainly see Hell-Fire!</item>
        <item>Again, you shall see it with certainty of sight!</item>
        <item>Then, shall you be questioned that Day about the joy (you indulged in!).</item>
    </string-array>
    <string-array name="se101">
        <item>The (Day) of Noise and Clamor:</item>
        <item>What is the (Day) of Noise and Clamor?</item>
        <item>And what will explain to you what the (Day) of Noise and Clamor is?</item>
        <item>(It is) a Day whereon men will be like moths scattered about,</item>
        <item>And the mountains will be like carded wool.</item>
        <item>Then, he whose balance (of good deeds) will be (found) heavy,</item>
        <item>Will be in a life of good pleasure and satisfaction.</item>
        <item>But he whose balance (of good deeds) will be (found) light,-</item>
        <item>Will have his home in a (bottomless) Pit.</item>
        <item>And what will explain to you what this is?</item>
        <item>(It is) a Fire Blazing fiercely!</item>
    </string-array>
    <string-array name="se100">
        <item>By the (Steeds) that run, with panting (breath),</item>
        <item>And strike sparks of fire,</item>
        <item>And push home the charge in the morning,</item>
        <item>And raise the dust in clouds the while,</item>
        <item>And penetrate forthwith into the midst (of the foe) en masse;-</item>
        <item>Truly man is, to his Lord, ungrateful;</item>
        <item>And to that (fact) he bears witness (by his deeds);</item>
        <item>And violent is he in his love of wealth.</item>
        <item>Does he not know,- when that which is in the graves is scattered abroad</item>
        <item>And that which is (locked up) in (human) breasts is made manifest-</item>
        <item>That their Lord had been Well-acquainted with them, (even to) that Day?</item>
    </string-array>
    <string-array name="se99">
        <item>When the earth is shaken to her (utmost) convulsion,</item>
        <item>And the earth throws up her burdens (from within),</item>
        <item>And man cries (distressed): \'What is the matter with her?-</item>
        <item>On that Day will she declare her tidings:</item>
        <item>For that your Lord will have given her inspiration.</item>
        <item>On that Day will men proceed in companies sorted out, to be shown the deeds that they (had done).</item>
        <item>Then shall anyone who has done an atom\'s weight of good, see it!</item>
        <item>And anyone who has done an atom\'s weight of evil, shall see it.</item>
    </string-array>
</resources>